Add edit and update

--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -31,4 +31,9 @@
         <td> <%= @cat.description %></td>
     </tr>
 
+    <tr>
+        <td>Edit this cat</td>
+        <td> <a href="/cats/ <%=@cat.id%>/edit"> Edit this cat </a> </td>
+    </tr>
+
 </table>
