--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,4 +1,4 @@
-<form action=cats_url method="post">
+<form action="/cats" method="post">
   <h2> Name </h2>
   <input type="text" name="cat[name]">
   <br>
@@ -24,7 +24,7 @@
    </select>
    <br>
    <h2> Date of Birth </h2>
-    <input type ="date">
+    <input type ="date" name="cat[birth_date]">
 
  <h2> Description </h2>
 <label for="cat_description"</label>
